--- a/src/Sites/Bzway.Sites.OpenApi/Bzway.Sites.OpenApi.csproj
+++ b/src/Sites/Bzway.Sites.OpenApi/Bzway.Sites.OpenApi.csproj
@@ -24,6 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Database\Bzway.Database.Core\Bzway.Database.Core.csproj" />
+    <ProjectReference Include="..\..\Database\Bzway.Database.File\Bzway.Database.File.csproj" />
     <ProjectReference Include="..\..\Framework\Bzway.Framework.Application\Bzway.Framework.Application.csproj" />
   </ItemGroup>
 
