--- a/src/Sites/Bzway.Sites.OpenApi/Dockerfile
+++ b/src/Sites/Bzway.Sites.OpenApi/Dockerfile
@@ -1,6 +1,20 @@
-FROM microsoft/aspnetcore:1.1
-ARG source
+FROM microsoft/aspnetcore:2.0 AS base
 WORKDIR /app
 EXPOSE 80
-COPY ${source:-obj/Docker/publish} .
+
+FROM microsoft/aspnetcore-build:2.0 AS build
+WORKDIR /src
+COPY *.sln ./
+COPY WebApplication1/WebApplication1.csproj WebApplication1/
+RUN dotnet restore
+COPY . .
+WORKDIR /src/WebApplication1
+RUN dotnet build -c Release -o /app
+
+FROM build AS publish
+RUN dotnet publish -c Release -o /app
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app .
 ENTRYPOINT ["dotnet", "Bzway.Sites.OpenApi.dll"]
