--- a/src/Common/Bzway.Common.Utility/Bzway.Common.Utility.csproj
+++ b/src/Common/Bzway.Common.Utility/Bzway.Common.Utility.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="RSA\BigInteger.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac" Version="4.6.2" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0" />
     <PackageReference Include="DotNetCore.NPOI" Version="1.0.2" />
@@ -14,6 +18,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="System.Xml.XmlSerializer" Version="4.3.0" />
     <PackageReference Include="ZKWeb.System.Drawing" Version="4.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="RSA\" />
   </ItemGroup>
 
 </Project>
