--- a/src/Sites/Bzway.Site.BackOffice/Bzway.Sites.BackOffice.csproj
+++ b/src/Sites/Bzway.Site.BackOffice/Bzway.Sites.BackOffice.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.2" />
     <PackageReference Include="AutoMapper" Version="6.2.2" />
+    <PackageReference Include="BuildBundlerMinifier" Version="2.6.362" />
     
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.2.1" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.0.2" />
