--- a/src/Sites/Bzway.Site.FrontPage/appsettings.json
+++ b/src/Sites/Bzway.Site.FrontPage/appsettings.json
@@ -4,5 +4,12 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "DefaultSite": {
+    "Name": "Default Site",
+    "Host": "http://localhost:5000"
+  },
+  "SiteSetting": {
+    "DataFolder": "../../../data"
   }
 }
