--- a/src/Sites/Bzway.Site.BackOffice/Bzway.Sites.BackOffice.csproj
+++ b/src/Sites/Bzway.Site.BackOffice/Bzway.Sites.BackOffice.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <PackageTargetFallback>$(PackageTargetFallback);portable-net45+win8+wp8+wpa81;</PackageTargetFallback>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Controllers\NewsController.cs" />
+    <Compile Remove="Controllers\ValuesController.cs" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Common\Bzway.Common.Script\Bzway.Common.Script.csproj" />
     <ProjectReference Include="..\..\Common\Bzway.Common.Share\Bzway.Common.Share.csproj" />
