--- a/src/Common/Bzway.Common.Utility/Bzway.Common.Utility.csproj
+++ b/src/Common/Bzway.Common.Utility/Bzway.Common.Utility.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
-  </PropertyGroup>
+    <TargetFramework>netstandard2.0</TargetFramework>
+  </PropertyGroup> 
 
   <ItemGroup>
     <Compile Remove="RSA\BigInteger.cs" />
