--- a/src/Database/Bzway.Database.File/Bzway.Database.File.csproj
+++ b/src/Database/Bzway.Database.File/Bzway.Database.File.csproj
@@ -1,9 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
-  </PropertyGroup>
-
+    <TargetFramework>netstandard2.0</TargetFramework>
+  </PropertyGroup> 
   <ItemGroup>
     <ProjectReference Include="..\..\Common\Bzway.Common.Script\Bzway.Common.Script.csproj" />
     <ProjectReference Include="..\..\Common\Bzway.Common.Share\Bzway.Common.Share.csproj" />
@@ -18,6 +16,4 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.4.0" />
   </ItemGroup>
-
-
 </Project>
