--- a/src/Common/Bzway.Common.Share/Bzway.Common.Share.csproj
+++ b/src/Common/Bzway.Common.Share/Bzway.Common.Share.csproj
@@ -21,6 +21,9 @@
     <Reference Include="System.Runtime.Loader">
       <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.netcore.app\2.1.0\ref\netcoreapp2.1\System.Runtime.Loader.dll</HintPath>
     </Reference>
+    <Reference Include="System.Runtime.Serialization.Formatters">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.netcore.app\2.1.0\ref\netcoreapp2.1\System.Runtime.Serialization.Formatters.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
