--- a/src/Sites/Bzway.Site.BackOffice/Bzway.Sites.BackOffice.csproj
+++ b/src/Sites/Bzway.Site.BackOffice/Bzway.Sites.BackOffice.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\..\Framework\Bzway.Framework.Application\Bzway.Framework.Application.csproj" />
     <ProjectReference Include="..\..\Framework\Bzway.Framework.Content\Bzway.Framework.Content.csproj" />
     <ProjectReference Include="..\..\Framework\Bzway.Framework.Scheduler\Bzway.Framework.Scheduler.csproj" />
+    <ProjectReference Include="..\..\Framework\Bzway.Framework.StaticFile\Bzway.Framework.StaticFile.csproj" />
     <ProjectReference Include="..\..\Modules\Bzway.Module.Wechat\Bzway.Module.Wechat.csproj" />
   </ItemGroup>
 
